# shifter

./: Cargo.toml
assets_src/: player.xcf
src/: asset.rs  camera.rs  config.rs  debug.rs  lib.rs  main.rs  run.rs  state.rs
src/asset/: mod.rs  svgdata.rs
src/game/: label.rs  mod.rs  overlord.rs  physics.rs  player.rs  prefab.rs  spawn.rs  spawn_world.rs  spawner.rs  world.rs
src/game/physics/: bounding_box.rs  collider.rs  dynamic_object.rs  mod.rs  shape.rs  util.rs
src/loading/: mod.rs
src/menu/: mod.rs
src/util/: iter.rs  mod.rs  quat.rs  shape.rs  transform.rs  vec.rs
