[package]
name = "shifter"
version = "0.1.0"
authors = ["Evgeny Papazyan <swordelf@mail.ru>"]
edition = "2018"

[features]
# enable debug systems, defined in `debug` module
debug = ["bevy-inspector-egui"]

[dependencies]
anyhow = "1.0"
bevy = "0.5"
bevy-inspector-egui = {version = "0.4.1", optional = true}
strum = { version = "0.20", features = ["derive"] }
svg = "0.9.1"
itertools = "0.10.0"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
